# wcurvint

./: CMakeLists.txt  LICENSE  README-CN.md  README.md  build.sh
cs/: WCurvInt.cs
include/: wcurvint.h
src/: WGArc2d.h  WGIntersectHelper2d.cpp  WGIntersectHelper2d.h  wcurvint.cpp
thirdpart/wsolver/include/: wsbasis.h  wsolver.h
thirdpart/wsolver/lib/: wsolver.lib
